# backend

./: .gitignore  README.md  environments.py
.devcontainer/: devcontainer.json
algorithm/codility/: binary.py  distinct.py  fish.py  frogReverOne.py  maxProductOfThree.py  minPerimeterRectangle.py  passingCars.py
algorithm/leetcode/: merge_sorted_array.py  pyproject.toml
best_practice/: class_design.py  coding.py  dataapi.py  module_design.py  unittest_design.py
best_practice/code_implementation/: function_design.py
best_practice/coding/: coding_design.py
best_practice/error_design/: error_handling.md  exceptions.py  logging.md  trouble_shooting.md  typed_dict.py  views.py
best_practice/model_design/: data_design.md  data_design.py  table_design.md  table_design.py
best_practice/system_design/: library_design.md  network_design.md  process_structure.md  project_structure.md  resource_design.md  server_structure.md
best_practice/todos/: requirement_definition.md  screen_mockup.md
best_practice/unittest/: sales.py  test_sales.py  test_unittest_design.py  unittest_design.py
data_analytics/business_case/: lesson.py
data_analytics/business_case_paractice/: lesson.py
data_analytics/business_communication/: lesson.py
framework/streamlit/: README.md  image_exam.py  main.py
grammer/asynico/: lock_lesson.py
grammer/basic_operation/: class_special_method.py
grammer/database/: data.pickle  dbm_lesson.py
grammer/encryption/: hashlib_lesson.py
grammer/log_and_config/: config_lesson.py  log_test.py
helloworldproject/: db.sqlite3
openai/: README.md  app_chatgpt_test.py
openai/introduction_to_building_a_chat_system_with_chatgpt_langchain/: README.md  pyproject.toml
openai/introduction_to_building_a_chat_system_with_chatgpt_langchain/slackapp-chatgpt/: app.py  requirements.txt  serverless.yml
openai/introduction_to_building_a_chat_system_with_chatgpt_langchain/web_app_with_streamlit/: app.py
other/: AI_human_work_together  AI_human_work_together.md  test_conversation_loads.py  test_json_loads.py  test_whisper.py
python-study/: test_setattr.py  thread_local.py  timedelta_test.py
python/other/: pyproject.toml  test_getattr.py  test_setattr.py
python/other/OCR/: README.md
python/other/OCR/azure/: output_1.txt
python/other/mqtt/: pyproject.toml
python/other/mqtt/tests/: test_main.py
python_programming/: class_lesson.py  csv_test.py  email_lesson.py  file_operation.py  lesson.py  log_test.py  logging_lesson.py  optparse_lesson.py  subprocess_lesson.py  template_test.py  yaml_lesson.py
reviewproject/: manage.py
(+363 files in other folders)
