[tool.poetry]
name = "introduction-to-building-a-chat-system-with-chatgpt-langchain"
version = "0.1.0"
description = ""
authors = ["yoshikikasama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.30.0"
langchain = "^0.1.3"
openai = "^1.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
