[tool.poetry]
name = "introduction-to-building-a-chat-system-with-chatgpt-langchain"
version = "0.1.0"
description = ""
authors = ["cm-yoshikikasama <kasama.yoshiki@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.30.0"
langchain = "^0.1.3"
openai = "^1.9.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.0.15"
langchain-openai = "^0.0.3"
duckduckgo-search = "^4.2"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
