[tool.poetry]
name = "other"
version = "0.1.0"
description = ""
authors = ["yoshikikasama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-cognitiveservices-vision-computervision = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
