[tool.poetry]
name = "mqtt"
version = "0.1.0"
description = ""
authors = ["yoshikikasama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^1.6.1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
